dataset1235/2025-2/2318198438/users/3878856075/executions/1897677159_48684178.log
== RUN (2025-08-27 19:38:10)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
total=float(input(lucro obtido:))

print(round(total*0.3 , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 4
    total=float(input(lucro obtido:))
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:38:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
total=float(input("lucro obtido:"))

print(round(total*0.3 , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
lucro obtido:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
lucro obtido:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
lucro obtido:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
lucro obtido:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
lucro obtido:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
lucro obtido:568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:38:16)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
total=float(input("lucro obtido:"))

print(round(total*0.3 , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
lucro obtido:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
lucro obtido:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
lucro obtido:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
lucro obtido:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
lucro obtido:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
lucro obtido:568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
